# OpenAI_Agent_SDK

./: .gitignore  Prompt.txt  README.md  SECURITY.md
02_OpenAi_Agent_with_LiteLLm/: README.md  main.py
03_Difference Openrouter & Simple Integration/: main.py
04_Multipal_Agents_code_Basic/: main.py
05_Agent_with_Chainlit_Ui/: .gitignore
07_Agent_Results/: hello.py
11_Context_code/: main.py
14_Agent_REPL/: pyproject.toml
15_Agent_Visualization/: Source.gv  pyproject.toml
17_Agent_as_Tools/: main.py
18_Tool_dynamic_Permission/: main.py  pyproject.toml
19_Agent_with_Handoff_Tools/: .gitignore  chainlit_UI.py  history.txt  pyproject.toml  tools.py
21_Handoff_Dynamic_Permission/: pyproject.toml
23_Guardrails/: README.md
26_Items/: main.py
Agent_Clone/: main.py  pyproject.toml
Agent_Dynamic_context/: .env  main.py
Agent_Guardrail/: pyproject.toml
Agent_Handoff-() Parameters/: README.md
Agent_REPL/: README.md  main.py
Agent_Results/: hello.py  pyproject.toml
Agent_Streaming_code/: main.py
Agent_Visualization/: .gitignore  main.py
Agent_as_Tools/: .gitignore  pyproject.toml
Agent_context_Runtime/: main.py  pyproject.toml  ui.py
Agent_with_Dynamic_input/: hello.py
Agent_with_Guardrails/: Output_Guardrails.py  input_Guardrails.py  pyproject.toml
Agent_with_Handoff_Tools/: main.py
Agent_with_Tools/: Combine_code.py  README.md  main.py  pyproject.toml
Agent_with_context/: main.py  pyproject.toml  ui.py
Agent_with_web-Browser/: .gitignore  main.py  pyproject.toml
Agenthooks/: README.md
Chainlit/: Chainlit_basic_Code.py
(+46 files in other folders)
